--- a/html/mobile/index.html
+++ b/html/mobile/index.html
@@ -41,24 +41,14 @@
         <h1>iSchedule</h1>
     </div>
     <div data-role="content"> 
-        <h3> Welcome to CHI'13 interactive schedule. </h3>
-        <p> Here you can interact with the large displays found through the conference and discover interesting events and add them to your schedule.</p>
-        <p> You found one of the large displays? Great! Now, <a href="#screens" data-transition="slide">which one is it?</a></p>
-    </div>
-  </div>
-
-  <div data-role="page" id="screens" data-add-back-btn="true" data-back-btn-text="Instructions">
-    <div data-role="header" data-position="fixed">
-      <h1>iSchedule</h1>
-    </div>
-   
-    <div data-role="content"> 
-      <h3> The label at the top says...</h3>
-      <ul  id="screen_list" data-role="listview" data-filter="false">
-        <li><h3><a href="tiles.html" data-transition="slide">Screen 1</a></h3></li>
-        <li><h3><a href="tiles.html" data-transition="slide">Screen 2</a></h3></li>
-        <li><h3><a href="tiles.html" data-transition="slide">Screen 3</a></h3></li>
-        <li><h3><a href="tiles.html" data-transition="slide">Screen 4</a></h3></li>
+        <h3 id="welcome" class="centered"> Welcome to CHI'13 interactive schedule. </h3>
+        <p> Here you can interact with the large displays found through the conference and discover interesting events and add them to your schedule. It requires you to be within the venue and near to one of the shared displays.</p>
+        <h4 class="centered"> Select a display </h4>
+        <ul  id="screen_list" data-role="listview" data-filter="false">
+          <li><h4><a href="tiles.html" data-transition="slide">Screen 1</a></h4></li>
+          <li><h4><a href="tiles.html" data-transition="slide">Screen 2</a></h4></li>
+          <li><h4><a href="tiles.html" data-transition="slide">Screen 3</a></h4></li>
+          <li><h4><a href="tiles.html" data-transition="slide">Screen 4</a></h4></li>
       </ul>
     </div>
   </div>
