--- a/html/mobile/index.html
+++ b/html/mobile/index.html
@@ -8,35 +8,14 @@
     <link rel="stylesheet" href="css/roboto/fonts.css" />
     <link rel="stylesheet" href="css/mobile.css" />
     <script src="js/jquery-1.8.3.min.js"></script>
+    <script src="js/ischedule.js"></script>
     <script src="js/jquery.mobile-1.3.0.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/NativeBridge.js"></script>
   </head> 
 <body> 
   <div data-role="page" id="home" data-add-back-btn="true">
-    <script>
-     $(document).bind("mobileinit", function(){
-        $.extend(  $.mobile , {
-          touchOverflowEnabled: true,
-          orientationChangeEnabled: false
-        })
-      });
-      function closeISchedule(){
-        NativeBridge.call('closeISchedule');
-      }  
-
-      //Apply style depending on platform, iOS or Android
-      //Default is android, if not android loads iOS theme
-      var ua = navigator.userAgent.toLowerCase();
-      var isAndroid = ua.indexOf("android") > -1; //&& ua.indexOf("mobile");
-      if(!isAndroid) {
-        $($("link[rel=stylesheet]")[1]).attr({href : "css/ios.css"});
-        $($("link[rel=stylesheet]")[2]).remove();
-      }
-
-
-    </script>
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
         <a href="#" data-role="button" data-icon="arrow-l" onclick="closeISchedule();">More</a>     
         <h1>iSchedule</h1>
     </div>
