--- a/html/mobile/outside.html
+++ b/html/mobile/outside.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/roboto/fonts.css" />
     <link rel="stylesheet" href="css/mobile.css" />
     <script src="js/jquery-1.8.3.min.js"></script>
+    <script src="js/ischedule.js"></script>
     <script src="js/jquery.mobile-1.3.0.min.js"></script>
   </head> 
 <body> 
@@ -25,7 +26,7 @@
         $($("link[rel=stylesheet]")[3]).remove();
       }
     </script>
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
         <a href="#" data-role="button" data-icon="arrow-l" onclick="closeISchedule();">More</a>     
         <h1>iSchedule</h1>
     </div>
