--- a/html/mobile/search.html
+++ b/html/mobile/search.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/roboto/fonts.css" />
     <link rel="stylesheet" href="css/mobile.css" />
     <script src="js/jquery-1.8.3.min.js"></script>
+    <script src="js/ischedule.js"></script>
     <script src="js/NativeBridge.js"></script>
     <script src="js/jquery.mobile-1.3.0.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
@@ -15,104 +16,7 @@
 <body> 
  
 <div data-role="page" id="search"  data-add-back-btn="true"  data-back-btn-text="Back">
-  <script>
-  $(document).on("pageinit","#search", function(){
-    // all selected titles from the search interface
-    var result = "";
-    // all selected ids from the search interface
-    var letterCodes= [];
-    $( document ).on( "listviewbeforefilter", '#autocomplete', function ( e, data ) {
-        var $ul = $( this ),
-            $input = $( data.input ),
-            value = $input.val(),
-            html = "";
-        $ul.html( "" );
-        if ( value && value.length > 2 ) {
-            $ul.html( "<li><div class='ui-loader'><span class='ui-icon ui-icon-loading'></span></div></li>" );
-            $ul.listview( "refresh" );
-            $.ajax({
-                url: "http://92.243.30.77:8000/autocompletelist",
-                dataType: "jsonp",
-                crossDomain: true,
-                data: {
-                    substring: $input.val()
-                }
-            })
-            .then( function ( response ) {
-              console.log(response);
-                $.each( response, function ( i, val ) {
-                  $.each(val, function(j){
-                    html += "<li  class='result' data-source=" + i + " data-ids=" + val[j] +">" + j + "<span class='ui-li-count'>" + val[j].length + "</span></li>";
-                  })
-                });
-                $ul.html( html );
-                $ul.listview( "refresh" );
-                $ul.trigger( "updatelayout");
-            });
-        }
-    });
-
-    $("#autocomplete").listview({
-      autodividers: true,
-      autodividersSelector: function ( li ) {
-          var out = $(li).attr('data-source');
-          return out;
-      }
-    });
-
-    $("#autocomplete").delegate('.result', 'vclick', function(){
-      $(this).toggleClass("selected");
-      result = "";
-      letterCodes = [];
-      if($(".selected").exists()){
-         $("#post").css("visibility","visible");
-         var $selected = $(".selected");
-         for(var i = 0; i< $selected.length; i++){
-          var temp = $selected[i].innerText;
-          result += temp.substring(0, temp.length - 1) + " ";
-          letterCodes = letterCodes.concat(getCodes($selected[i]));
-         }
-      }
-      else{
-         $("#post").css("visibility","hidden");
-      }
-    });
-
-    $('#post').on("click", function(){
-      postFilter(result);
-      console.log(result);
-      $.mobile.changePage("tiles.html", "slide", true, true);
-    });
-
-  function getCodes(item){
-    var ids = $(item).attr("data-ids").split(",");
-    return ids;
-  }
-
-  function postFilter(result){
-    //$.post("http://localhost:8000/filters",
-    // Add your ip here to test with mobile device
-    // $.post("http://92.243.30.77:8000/filters",
-     $.post("http://92.243.30.77:8000/filters", 
-      {
-        "name": result,
-        "when": "now",
-        "volatile": true,
-        "tile": selectedTile,
-        "letterCode": letterCodes
-      },
-      function(data, status)
-      {
-        console.log("Updated session: " + data);
-      });
-  } ;
-
-    $.fn.exists = function () {
-      return this.length !== 0;
-    }
-  });
-  </script>
-  <div data-role="header" data-position="fixed">
+  <div data-role="header">
     <h1>Search</h1>
     <a id="post" class=" ui-btn-right invisible" href="tiles.html" data-icon="check">Show</a>
   </div>
