Show loading first

--- a/html/mosaic/tiles/session.html
+++ b/html/mosaic/tiles/session.html
@@ -216,5 +216,7 @@
         <p>Use the CHI 2013 mobile app to filter currently playing content to find something interesting. A video preview playlist of matching items will appear here.</p>
     </div>
 
+    <div id="loading">Loading...</div>
+
 </body>
 </html>
