--- a/html/mobile/index.html
+++ b/html/mobile/index.html
@@ -16,7 +16,7 @@
 <body> 
   <div data-role="page" id="home" data-add-back-btn="true">
     <div data-role="header">
-        <a href="#" data-role="button" data-icon="arrow-l" onclick="closeISchedule();">More</a>     
+        <a href="#" id="more" data-role="button" data-icon="arrow-l" onclick="closeISchedule();">More</a>     
         <h1>iSchedule</h1>
     </div>
     <div data-role="content"> 
@@ -24,10 +24,10 @@
         <p> Here you can interact with the large displays found through the conference and discover interesting events and add them to your schedule. It requires you to be within the venue and near to one of the shared displays.</p>
         <h4 class="centered"> Select a display </h4>
         <ul  id="screen_list" data-role="listview" data-filter="false">
-          <li><h4><a href="tiles.html" data-transition="slide">Screen 1</a></h4></li>
-          <li><h4><a href="tiles.html" data-transition="slide">Screen 2</a></h4></li>
-          <li><h4><a href="tiles.html" data-transition="slide">Screen 3</a></h4></li>
-          <li><h4><a href="tiles.html" data-transition="slide">Screen 4</a></h4></li>
+          <li><h4><a href="tiles.html" data-transition="slide" onclick="setScreen('169.254.124.102');">Screen 1</a></h4></li>
+          <li><h4><a href="tiles.html" data-transition="slide" onclick="setScreen('chischedule.org');">Screen 2</a></h4></li>
+          <li><h4><a href="tiles.html" data-transition="slide" onclick="setScreen(ip);">Screen 3</a></h4></li>
+          <li><h4><a href="tiles.html" data-transition="slide" onclick="setScreen(ip);">Screen 4</a></h4></li>
       </ul>
     </div>
   </div>
