added dynamic coloring for tiles given the time of the day

--- a/html/mobile/tiles.html
+++ b/html/mobile/tiles.html
@@ -30,14 +30,14 @@
       <div id="F" class="ui-block-b tile orange"><a href="#tiles" data-transition="slide">Filter videos</a></div>
       <div id="G" class="ui-block-a tile red"><a href="#tiles" data-transition="slide">Filter videos</a></div>
       <div id="H" class="ui-block-b tile red"><a href="#tiles" data-transition="slide">Filter videos</a></div> -->
-      <div id="A" class="ui-block-a tile light_purple"><span>Filter videos</span></div>
-      <div id="B" class="ui-block-b tile light_purple"><span>Filter videos</span></div>
-      <div id="C" class="ui-block-a tile light_purple"><span>Filter videos</span></div>
-      <div id="D" class="ui-block-b tile light_purple"><span>Filter videos</span></div>
-      <div id="E" class="ui-block-a tile green"><span>Filter videos</span></div>
-      <div id="F" class="ui-block-b tile blue"><span>Filter videos</span></div>
-      <div id="G" class="ui-block-a tile orange"><span>Filter videos</span></div>
-      <div id="H" class="ui-block-b tile red"><span>Filter videos</span></div>    
+      <div id="A" class="ui-block-a tile "><span>Filter videos</span></div>
+      <div id="B" class="ui-block-b tile "><span>Filter videos</span></div>
+      <div id="C" class="ui-block-a tile "><span>Filter videos</span></div>
+      <div id="D" class="ui-block-b tile "><span>Filter videos</span></div>
+      <div id="E" class="ui-block-a tile "><span>Filter videos</span></div>
+      <div id="F" class="ui-block-b tile "><span>Filter videos</span></div>
+      <div id="G" class="ui-block-a tile "><span>Filter videos</span></div>
+      <div id="H" class="ui-block-b tile "><span>Filter videos</span></div>    
     </div>
   </div>
 </div>
