Green line metro stops

--- a/html/mosaic/tiles/session.html
+++ b/html/mosaic/tiles/session.html
@@ -138,16 +138,16 @@
         <svg class="metro_stops session">
             <!-- Green Line -->
             <line x1="32" x2="32" y1="15" y2="40" class="line_251" />
-            <circle cx="32" cy="15" r="8" class="circle_251 left green room" />
+            <circle cx="32" cy="15" r="8" class="circle_251 right green room" />
 
             <line x1="112" x2="112" y1="15" y2="40" class="line_252A" />
-            <circle cx="112" cy="15" r="8" class="circle_252A left green room" />
+            <circle cx="112" cy="15" r="8" class="circle_252A right green room" />
             
             <line x1="408" x2="408" y1="15" y2="40" class="line_252B" />
-            <circle cx="408" cy="15" r="8" class="circle_252B left green room" />
+            <circle cx="408" cy="15" r="8" class="circle_252B right green room" />
 
             <line x1="498" x2="498" y1="15" y2="40" class="line_253" />
-            <circle cx="498" cy="15" r="8" class="circle_253 left green room" /> 
+            <circle cx="498" cy="15" r="8" class="circle_253 right green room" /> 
 
             <!-- Blue Line -->
             <line x1="32" x2="32" y1="15" y2="40" class="line_Blue" />
