Orange line metro stops fix

--- a/html/mosaic/tiles/session.html
+++ b/html/mosaic/tiles/session.html
@@ -79,13 +79,13 @@
 
             <!-- Orange Line -->
             <line x1="72" x2="72" y1="15" y2="40" class="line_Havane" />
-            <circle cx="72" cy="15" r="10" class="circle_Havane right orange theatre" />
+            <circle cx="72" cy="15" r="10" class="circle_Havane left orange theatre" />
 
             <line x1="411" x2="411" y1="15" y2="40" class="line_351" />
-            <circle cx="411" cy="15" r="10" class="circle_351 right orange room" />
+            <circle cx="411" cy="15" r="10" class="circle_351 left orange room" />
             
             <line x1="483" x2="483" y1="15" y2="40" class="line_352AB" />
-            <circle cx="483" cy="15" r="10" class="circle_352AB right orange room" />
+            <circle cx="483" cy="15" r="10" class="circle_352AB left orange room" />
 
             <!-- Red Line -->
             <line x1="72" x2="72" y1="15" y2="40" class="line_Bordeaux" />
