--- a/html/mosaic/tiles/session.html
+++ b/html/mosaic/tiles/session.html
@@ -151,7 +151,7 @@
 
             <!-- Blue Line -->
             <line x1="32" x2="32" y1="15" y2="40" class="line_Blue" />
-            <circle cx="32" cy="15" r="8" class="circle_Blue right blue theatre" />
+            <circle cx="32" cy="15" r="8" class="circle_Blue left blue theatre" />
 
             <line x1="112" x2="112" y1="15" y2="40" class="line_241" />
             <circle cx="112" cy="15" r="8" class="circle_241 left blue room" />
@@ -163,7 +163,7 @@
             <circle cx="453" cy="15" r="8" class="circle_242B left blue room" />
             
             <line x1="498" x2="498" y1="15" y2="40" class="line_243" />
-            <circle cx="498" cy="15" r="8" class="circle_243 right blue room" />
+            <circle cx="498" cy="15" r="8" class="circle_243 left blue room" />
 
             <!-- Orange Line -->
             <line x1="72" x2="72" y1="15" y2="40" class="line_Havane" />
