added back button from tiles to select screen

--- a/html/mobile/tiles.html
+++ b/html/mobile/tiles.html
@@ -17,6 +17,7 @@
 
 <div data-role="page" id="tiles"  data-add-back-btn="true"  data-back-btn-text="Back">
   <div data-role="header">  
+    <a href="http://chischedule.org:8000/mobile/" id="backToScreens" data-role="button" data-icon="arrow-l">Back</a>     
     <h1>Tap to Add</h1>
   </div>
  
