added reload button

--- a/html/mobile/tiles.html
+++ b/html/mobile/tiles.html
@@ -19,6 +19,7 @@
   <div data-role="header">  
     <a href="http://chischedule.org:8000/mobile/" id="backToScreens" data-role="button" data-icon="arrow-l">Back</a>     
     <h1>Tap to Add</h1>
+    <a href="#" id="refresh" data-role="button" data-icon="refresh" onclick='reload();'>reload</a>     
   </div>
  
   <div id ="main_grid" data-role="content"> 
