--- a/html/mobile/index.html
+++ b/html/mobile/index.html
@@ -25,9 +25,9 @@
         <h4 class="centered"> Select a display </h4>
         <ul  id="screen_list" data-role="listview" data-filter="false">
           <li><h4><a href="http://10.40.170.185:8000/mobile/tiles.html" data-transition="slide">Screen 1</a></h4></li>
-          <!--<li><h4><a href="tiles.html" data-transition="slide" onclick="setScreen('chischedule.org');">Screen 2</a></h4></li>
-          <li><h4><a href="tiles.html" data-transition="slide" onclick="setScreen(ip);">Screen 3</a></h4></li>
-          <li><h4><a href="tiles.html" data-transition="slide" onclick="setScreen(ip);">Screen 4</a></h4></li>-->
+          <li><h4><a href="http://10.40.170.185:8000/mobile/tiles.html" data-transition="slide">Screen 2</a></h4></li>
+<!--           <li><h4><a href="tiles.html" data-transition="slide" onclick="setScreen(ip);">Screen 3</a></h4></li>
+          <li><h4><a href="tiles.html" data-transition="slide" onclick="setScreen(ip);">Screen 4</a></h4></li> -->
       </ul>
     </div>
   </div>
