fixed css on search bar

--- a/html/mobile/search.html
+++ b/html/mobile/search.html
@@ -21,7 +21,7 @@
     <a id="post" class=" ui-btn-right invisible" href="tiles.html" data-icon="check">Show</a>
   </div>
  
-  <div data-role="content"> 
+  <div data-role="content" id="searchBar"> 
     <ul id='autocomplete' data-role='listview' data-inset='false' data-filter='true' data-filter-placeholder='Search everything'  data-autodividers="true"> 
     </ul>
   </div>
