--- a/html/mobile/index.html
+++ b/html/mobile/index.html
@@ -22,7 +22,7 @@
     <div data-role="content"> 
         <h3 id="welcome" class="centered"> Welcome to CHI'13 interactive schedule. </h3>
         <p> Here you can interact with the large displays found through the conference and discover interesting events and add them to your schedule. It requires you to be within the venue and near to one of the shared displays.</p>
-        <h4 class="centered"> Select a display </h4>
+        <h4 class="centered"> Select the display you are at </h4>
         <ul  id="screen_list" data-role="listview" data-filter="false">
           <li><h4><a href="http://10.40.170.185:8000/mobile/tiles.html" data-transition="slide">Screen 1</a></h4></li>
           <li><h4><a href="http://10.40.171.10:8000/mobile/tiles.html" data-transition="slide">Screen 2</a></h4></li>
