--- a/html/viihaptics/index.html
+++ b/html/viihaptics/index.html
@@ -7,5 +7,5 @@
     <script type="text/javascript" src="viihaptics.js"></script>
 </head>
 <body>
-<div id="pointer" style="width:100px; height: 100px; position:absolute; top: 10px; left: 10px; background: -webkit-radial-gradient(center, ellipse cover, rgba(0,0,0,1) 0%,rgba(0,0,0,0) 70%,rgba(0,0,0,0) 100%);"></div></body>
+</body>
 </html>
