refinements to syncing and default tiles behavior before loading first time

--- a/html/mobile/tiles.html
+++ b/html/mobile/tiles.html
@@ -24,14 +24,14 @@
  
   <div id ="main_grid" data-role="content"> 
     <div  class="ui-grid-a">
-      <div id="A" class="ui-block-a tile "><span>Filter videos</span></div>
-      <div id="B" class="ui-block-b tile "><span>Filter videos</span></div>
-      <div id="C" class="ui-block-a tile "><span>Filter videos</span></div>
-      <div id="D" class="ui-block-b tile "><span>Filter videos</span></div>
-      <div id="E" class="ui-block-a tile "><span>Filter videos</span></div>
-      <div id="F" class="ui-block-b tile "><span>Filter videos</span></div>
-      <div id="G" class="ui-block-a tile "><span>Filter videos</span></div>
-      <div id="H" class="ui-block-b tile "><span>Filter videos</span></div>    
+      <div id="A" class="ui-block-a tile "><span>Loading...</span></div>
+      <div id="B" class="ui-block-b tile "><span>Loading...</span></div>
+      <div id="C" class="ui-block-a tile "><span>Loading...</span></div>
+      <div id="D" class="ui-block-b tile "><span>Loading...</span></div>
+      <div id="E" class="ui-block-a tile "><span>Loading...</span></div>
+      <div id="F" class="ui-block-b tile "><span>Loading...</span></div>
+      <div id="G" class="ui-block-a tile "><span>Loading...</span></div>
+      <div id="H" class="ui-block-b tile "><span>Loading...</span></div>    
     </div>
   </div>
   <div id="offlineMsg" data-role="popup" data-theme="a" data-overlay-theme="a" class="ui-content">
