--- a/html/mosaic/vertical.html
+++ b/html/mosaic/vertical.html
@@ -3,6 +3,7 @@
 <head> 
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/vertical.css">
+    <script type="text/javascript" src="viihaptics.js"></script>
 </head>
 <body>
     <div id="vertical">
