Easing for smoother animation

--- a/html/mosaic/tiles/session.html
+++ b/html/mosaic/tiles/session.html
@@ -8,6 +8,7 @@
 
     <script type="text/javascript" src="/lib/jquery.min.js"></script>
     <script type="text/javascript" src="/lib/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="/lib/jquery.easing.min.js"></script>
     <script type="text/javascript" src="/lib/jwplayer/jwplayer.js"></script>
 
     <script type="text/javascript" src="/lib/d3.min.js"></script>
