--- a/html/mosaic/tiles/social.html
+++ b/html/mosaic/tiles/social.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="../css/tiles/social.css" />
 
     <script type="text/javascript" src="/lib/jquery.min.js"></script>
+    <script type="text/javascript" src="/lib/jquery.easing.min.js"></script>
     <script src="/lib/jquery.freetile.min.js"></script>
     <script type="text/javascript" src="../js/tiles/social.js"></script>    
 </head>
