--- a/html/mosaic/index.html
+++ b/html/mosaic/index.html
@@ -6,21 +6,21 @@
 <body>
 <div id="vertical">
 
-    <iframe class="tile row1 col1" src="tiles/session.html#A"></iframe>
+    <iframe class="tile row1 col1" src="tiles/session.html#A?top=0&left=0"></iframe>
 
-    <iframe class="tile row1 col2" src="tiles/session.html#B"></iframe>
+    <iframe class="tile row1 col2" src="tiles/session.html#B?top=0&left=540"></iframe>
 
-    <iframe class="tile row2 col1" src="tiles/session.html#C"></iframe>
+    <iframe class="tile row2 col1" src="tiles/session.html#C?top=405&left=0"></iframe>
 
-    <iframe class="tile row2 col2" src="tiles/session.html#D"></iframe>
+    <iframe class="tile row2 col2" src="tiles/session.html#D?top=405&left=540"></iframe>
 
-    <iframe class="tile row3 col1" src="tiles/session.html#E"></iframe>
+    <iframe class="tile row3 col1" src="tiles/session.html#E?top=810&left=0"></iframe>
 
-    <iframe class="tile row3 col2" src="tiles/session.html#F"></iframe>
+    <iframe class="tile row3 col2" src="tiles/session.html#F?top=810&left=540"></iframe>
 
-    <iframe class="tile row4 col1" src="tiles/session.html#G"></iframe>
+    <iframe class="tile row4 col1" src="tiles/session.html#G?top=1215&left=0"></iframe>
 
-    <iframe class="tile row4 col2" src="tiles/session.html#H"></iframe>
+    <iframe class="tile row4 col2" src="tiles/session.html#H?top=1215&left=540"></iframe>
 
     <iframe class="social" src="tiles/social.html" scrolling="no"></iframe>
 
