--- a/html/mosaic/tiles/session.html
+++ b/html/mosaic/tiles/session.html
@@ -219,7 +219,7 @@
     <div id="action">
         <h1>This tile is interactive!</h1>
 
-        <p>Use the CHI 2013 mobile app to filter currently playing content to find something interesting. A video preview playlist of matching items will appear here.</p>
+        <p>Use the CHI 2013 mobile app to create a video preview playlist of currently ongoing content. Or just point here and hover over a keyword to select it.</p>
     </div>
 
     <div id="loading">Loading...</div>
