--- a/html/mosaic/tiles/session.html
+++ b/html/mosaic/tiles/session.html
@@ -222,6 +222,12 @@
         <p>Use the CHI 2013 mobile app to create a video preview playlist of currently ongoing content. Or just point here and hover over a keyword to select it.</p>
     </div>
 
-    <div id="loading">Loading...</div>
+    <div id="loading">
+        <p>Synching...</p>
+
+        <div class="meter orange nostripes">
+            <span style="width: 0%"></span>
+        </div>
+    </div>
 </body>
 </html>
