--- a/html/mosaic/tiles/session.html
+++ b/html/mosaic/tiles/session.html
@@ -10,6 +10,10 @@
     <script type="text/javascript" src="/lib/jquery-ui.min.js"></script>
     <script type="text/javascript" src="/lib/jwplayer/jwplayer.js"></script>
 
+    <script type="text/javascript" src="/lib/d3.min.js"></script>
+    <script type="text/javascript" src="/lib/d3.layout.cloud.js"></script>
+    <script type="text/javascript" src="/lib/vega.min.js"></script>
+
     <script type="text/javascript" src="../js/jquery.svg.min.js"></script>
     <script type="text/javascript" src="../js/jquery.svgdom.min.js"></script>
     <script type="text/javascript" src="../js/titleCaps.js"></script>
@@ -208,6 +212,8 @@
     <div id="submissions">
 
     </div>
+
+    <div id="tagcloud"></div>
 
     <div id="action">
         <h1>This tile is interactive!</h1>
