moved code to static page

--- a/html/mobile/index.html
+++ b/html/mobile/index.html
@@ -12,6 +12,22 @@
     <script src="js/jquery.mobile-1.3.0.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/NativeBridge.js"></script>
+  <script>
+  $(document).on("pageinit","#home", function(){
+    var hostIp = function getHostIp(){
+
+        $.get('/registeredIps', function(data){
+         console.log(data);
+          for(screen in data){
+              ip = data[screen];
+              name = screen; 
+          $("#screen_list").append('<li><h4><a href="http://' + ip + ':8000/mobile/tiles.html" data-transition="slide">' + name + '</a></h4></li>');
+        }
+        });
+
+      };
+    });
+  </script>
   </head> 
 <body> 
   <div data-role="page" id="home" data-add-back-btn="true">
