trying to get jqm to listen

--- a/html/mobile/index.html
+++ b/html/mobile/index.html
@@ -14,6 +14,7 @@
     <script src="js/NativeBridge.js"></script>
   <script>
   $(document).on("pageinit","#home", function(){
+
     var hostIp = function getHostIp(){
 
         $.get('/registeredIps', function(data){
@@ -21,10 +22,13 @@
           for(screen in data){
               ip = data[screen];
               name = screen; 
-          $("#screen_list").append('<li><h4><a href="http://' + ip + ':8000/mobile/tiles.html" data-transition="slide">' + name + '</a></h4></li>');
+             $("#screen_list").append('<li><h4><a href="http://' + ip + ':8000/mobile/tiles.html" data-transition="slide">' + name + '</a></h4></li>');
         }
         });
 
+        $.get("http://chischedule.org:8000/registeredIps", function(data){
+            console.log(data);
+        });
       };
     });
   </script>
